# github-org-metrics

./: .gitignore  .pre-commit-config.yaml  README.md  cupa-arc_github_outliers.csv  github_metrics.py  pyproject.toml
.github/workflows/: ci.yml
github_metrics/: __init__.py  analyze.py  cli.py  client.py  fetch.py  models.py
tests/: test_analyze.py  test_cli.py  test_client.py  test_end_to_end.py  test_fetch.py  test_models.py
